# opengl_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.org  flake.nix
.direnv/: flake-profile-2-link
res/shaders/: basic.glsl  frag.glsl  lighting.glsl  sdf.glsl  vert.glsl
src/: Application.h  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  IsometricCamera.cpp  IsometricCamera.h  PlayerController.cpp  PlayerController.h  Renderer.cpp  Renderer.h  SDFObject.cpp  SDFObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h  camera.h  component_array.h  component_manager.h  coordinator.h  ecs_constants.h  entity_manager.h  event.h  event_manager.h  index_buffer.cpp  index_buffer.h  input.cpp  input.h  main.cpp  (+15 more)
src/component/: camera.h  transform.h
src/system/: camera_system.cpp  camera_system.h
tests/: CMakeLists.txt  transform_tst.cpp
